Fix mis-aligned delete button after changes

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -207,9 +207,9 @@ html {
 }
 
 .BranchCondition {
-  margin-right: 75px;
   overflow: hidden;
   padding-left: 13px;
+  padding-right: 75px;
   position: relative;
 
   &.error {
